fix slider not working on mobile

--- a/docs/style.css
+++ b/docs/style.css
@@ -266,6 +266,7 @@ height: 100%;
 div.cmp-img img {
 position: absolute;
 user-select: none;
+height: inherit;
 }
 
 div.cmp-left {
